--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -16,6 +16,7 @@ hooks:
         gulp
 web:
   document_root: "/public"
+  index_files: "index.html"
   whitelist:
       # CSS and Javascript.
       - \.css$
