add html to whitlisted formats

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -18,6 +18,7 @@ web:
   document_root: "/public"
   index_files: ["index.html"]
   whitelist:
+      - \.html$
       # CSS and Javascript.
       - \.css$
       - \.js$
